--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -16,17 +16,33 @@ div, input {
 	background:#000;
 }
 
-#inputbox {
-	width: 	900px;
+#cmdResult {
+	width: 600px;
+	/*height: 150px;*/
+	left: 0px;
+	bottom: 40px;
+	margin: 0 0 10px 10px;
+}
+
+#cmdResult .entry {
+	display: block;
+	margin-top: 10px;
+}
+
+.cmd {
+	width: 	600px;
 	height: 30px;
 	margin: 0 0 10px 10px;
 	padding:0 0 0 5px;
-	background: rgba(0,0,0,0.5);
-	border: none;
-	color: 	#eee;
+	background: rgba(0,0,0,0.15);
+	color: 	#545454;
 	font-size: 14px;
 	bottom:	0px;
 	left:	0px;
+	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	border-radius: 7px;
+	border: 1px solid #545454;
 }
 
 #c {
