--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -9,11 +9,18 @@ div, input {
 	position:absolute;
 }
 
+canvas {
+	position:absolute;
+    left:0px;
+    top:0px;
+}
+
 #header {
 	width:	100%;
 	height:	50px;
 	top:	0px;
 	background:#000;
+	z-index: 5;
 }
 
 #cmdResult {
@@ -27,6 +34,7 @@ div, input {
 #cmdResult .entry {
 	display: block;
 	margin-top: 10px;
+	z-index: 5;
 }
 
 .cmd {
@@ -43,8 +51,13 @@ div, input {
 	-moz-border-radius: 7px;
 	border-radius: 7px;
 	border: 1px solid #545454;
+	z-index: 5;
 }
 
 #c {
-	z-index:9999;
+	z-index:1;
+}
+
+#cHighLight {
+	z-index:2;	
 }
