--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -69,6 +69,26 @@ canvas {
 	z-index: 3;	
 }
 
+#caseContent {
+	height: 200px;
+	width: 150px;
+	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	border-radius: 7px;
+	border: 1px solid #000;
+	background-color: rgba(46, 46, 46, 0.9);
+	z-index: 6;
+	position: relative;
+	top: 50px;
+	left: 50px;
+	display:none;
+}
+
+#caseContent .contentText {
+	text-align: center;
+	color: #FFF;
+	font-size:12px;
+}
 
 #errorBox {
 	height: 20px;
