--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -20,7 +20,13 @@ canvas {
 	width: 100%;
 	height:	50px;
 	top: 0px;
-	background: #000;
+	border-bottom: 2px solid #b1b1b1;
+	background-image: -webkit-linear-gradient(top, #B9B9B9 0%, #909090 100%);
+	background-image: -moz-linear-gradient(top, #B9B9B9 0%, #909090 100%);
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #B9B9B9), color-stop(1, #909090));
+	-webkit-box-shadow: 0px 0px 10px rgba(50, 50, 50, 1);
+	-moz-box-shadow:    0px 0px 10px rgba(50, 50, 50, 1);
+	box-shadow:         0px 0px 10px rgba(50, 50, 50, 1);
 	z-index: 5;
 }
 
@@ -65,8 +71,12 @@ canvas {
 	z-index: 2;
 }
 
-#cHighLight {
+#cPlayers {
 	z-index: 3;	
+}
+
+#cHighLight {
+	z-index: 4;	
 }
 
 #caseContent {
