--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -2,8 +2,11 @@ html, body {
 	width: 100%;
 	height: 100%;
 	margin: 0px;
-	background: #eee url('img/background.png') repeat-x top center;
-	font-family:"Times New Roman", Georgia, sans-serif;
+	background: #464646 url('img/grid.png') repeat top left;
+	font-family: Helvetica, Helv, swiss, sans-serif;
+	font-weight: bold;
+	color: #eee;
+	text-shadow: #222 1px 1px 1px;
 	overflow: hidden;
 }
 
