--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -39,15 +39,13 @@ canvas {
 	bottom: 40px;
 	margin: 0 0 10px 10px;
 	position: absolute;
+	z-index: 5;
+	display: none;
 }
 
 #cmdResult .entry {
 	display: block;
 	margin-top: 10px;
-}
-
-#cmdResult {
-	z-index: 5;
 }
 
 .cmd {
