--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -404,8 +404,9 @@ canvas {
 	width: 305px;
 	height: 309px;
 	background: rgba(0,0,0,0.4);
-	margin: 0 auto;
-	margin-top: 200px;
+	margin: 10% auto 0;
+/*	margin: 0 auto;
+	margin-top: 200px;*/
 	color: #eee;
 	font-family: Helvetica, sans-serif;
 	font-size: 14px;
