--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -565,8 +565,9 @@ i.leaf-icon {
 /* PLAYER LIST */
 
 .player-list {
-	min-width: 420px;
-	max-width: 420px;
+	font-size: 14px;
+	min-width: 410px;
+	max-width: 410px;
 	display: none;
 	position: absolute;
 	top:50px;
@@ -578,10 +579,10 @@ i.leaf-icon {
 	border-radius: 10px;
 	-moz-border-radius: 10px;
 	position: relative;
-	max-width: 420px;
+	max-width: 410px;
 	min-height: 300px;
 	max-height: 500px;
-	background: rgba(0,0,0,0.5);
+	background: rgba(0,0,0,0.7);
 	overflow: auto;
 	padding: 0;
 }
@@ -596,14 +597,13 @@ i.leaf-icon {
 	margin: 0;
 	list-style: none;
 	color: #eee;
-	font-size: 16px;
 }
 
 .labels {
-	padding: 7px 0 0 0;
+	/*padding: 7px 0 0 0;*/
 	height: 30px;
 	margin-bottom: 7px;
-	background: #111;
+	background: transparent url("img/case-content-topbar.png") no-repeat top left;
 	border-top-left-radius: 10px;
 	-moz-border-radius-topleft: 10px;
 	border-top-right-radius: 10px;
@@ -611,7 +611,10 @@ i.leaf-icon {
 }
 
 .label {
+	margin-top: 3px;
 	line-height: 30px;
+	color: #262626;
+	text-shadow: 1px 1px 1px #DDD;
 }
 
 .player-list-container span {
@@ -624,20 +627,26 @@ i.leaf-icon {
 
 .player-list li {
 	margin-bottom: 8px;
-	background: #191919;
+	background: #111;
+}
+
+.player-list li:hover {
+	background-color: #222;
 }
 
 .player-id {
 	font-weight: bold;
-	padding-left: 2px;
+	width: 20px;
+	text-align: right;
 }
 
 .player-lvl {
 	padding-left: 15px;
+	text-align: right;
 }
 
 .player-team {
-	padding-left: 25px;
+	padding-left: 10px;
 	width: 180px;
 	overflow: hidden;
 }
