--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -42,7 +42,6 @@ canvas {
 	cursor: pointer;
 }
 
-
 .topbar-menu-players {
 	background: transparent url("img/userlist_button.png") no-repeat top left;
 }
@@ -53,6 +52,11 @@ canvas {
 
 .topbar-menu-centermap {
 	background: yellowgreen;
+}
+
+.topbar-menu-godmode {
+	display: none;
+	background: cyan;
 }
 
 i.zappy-logo {
@@ -766,3 +770,47 @@ i.leaf-icon {
 	width: 260px;
 }
 /* END SETTINGS */
+
+/* GODMODE */
+.godmode {
+	font-size: 14px;
+	min-width: 300px;
+	height: 325px;
+	display: none;
+	position: absolute;
+	top:45px;
+	right:160px;
+	z-index: 499;
+	overflow: hidden;
+	padding: 0;
+}
+
+.godmode-topbar {
+	height: 25px;
+	background: transparent url("img/player-list-topbar.png") no-repeat top right;
+}
+
+.godmode-container h2 {
+	margin: -10px 0 10px -15px;
+	padding: 0;
+	display: block;
+	height: 30px;
+	background: transparent url("img/labels-topbar.png") no-repeat top left;
+	line-height: 30px;
+	font-weight: normal;
+	font-size: 14px;
+	text-indent: 43%;
+	color: #000;
+	text-shadow: 1px 1px 1px #DDD;
+}
+
+.godmode-container {
+	width: 405px;
+	min-height: 200px;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	background: rgba(0,0,0,0.7);
+	padding: 10px 0 0 15px;
+}
+
+/* END GODMODE */
