--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -730,7 +730,8 @@ i.leaf-icon {
 	margin-bottom: 5px;
 	line-height: 30px;
 	height: 30px;
-	width: 130px;
+	width: 150px;
+	font-weight: bold;
 }
 
 .setting-showres-button {
