--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -51,12 +51,12 @@ canvas {
 }
 
 .topbar-menu-centermap {
-	background: yellowgreen;
+	background: transparent url("img/center_button.png") no-repeat top left;
 }
 
 .topbar-menu-godmode {
 	display: none;
-	background: cyan;
+	background: transparent url("img/godmode_button.png") no-repeat top left;
 }
 
 i.zappy-logo {
@@ -644,10 +644,6 @@ i.leaf-icon {
 	background: #111;
 }
 
-.player-list li:hover {
-	background-color: #222;
-}
-
 .player-id {
 	font-weight: bold;
 	width: 20px;
@@ -671,13 +667,13 @@ i.leaf-icon {
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	display: inline-block;
-	background: #0791f2;
+	background: #358894;
 	margin-right: 10px;
 	padding: 5px 10px 5px 10px;
 }
 
 .player-follow-button:hover {
-	background: #63b5ee;
+	background: #42a2b0;
 }
 
 /* END PLAYER LIST */
@@ -747,15 +743,18 @@ i.leaf-icon {
 .setting-music-button {
 	vertical-align: middle;
 	display: inline-block;
-	background: red;
 	line-height: 30px;
 	height: 30px;
 	width: 80px;
 	cursor: pointer;
 }
 
+.setting-disabled {
+	background: transparent url("img/disabled.png") no-repeat top left;
+}
+
 .setting-enabled {
-	background:green;	
+	background: transparent url("img/enabled.png") no-repeat top left;	
 }
 
 .setting-timer-value {
