--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -13,6 +13,29 @@ html, body {
 	position: absolute;
 }*/
 
+/* SCROLLBAR DESIGN */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,1); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(255,255,255,0.6); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,255,255,0.4); 
+}
+
+/* END SCROLLBAR DESIGN */
+
 canvas {
 	position: absolute;
 	left: 0px;
@@ -591,15 +614,17 @@ i.leaf-icon {
 }
  
 .player-list-container {
-	border-radius: 10px;
-	-moz-border-radius: 10px;
+	border-bottom-left-radius: 10px;
+	-moz-border-radius-bottomleft: 10px;
+	border-bottom-right-radius: 10px;
+	-moz-border-radius-bottomright: 10px;
 	position: relative;
 	max-width: 410px;
 	min-height: 300px;
-	max-height: 500px;
+	max-height: 400px;
 	background: rgba(0,0,0,0.7);
 	overflow: auto;
-	padding: 0;
+	padding: 10px 0 0 0;
 }
 
 .player-list-topbar {
@@ -615,9 +640,8 @@ i.leaf-icon {
 }
 
 .labels {
-	/*padding: 7px 0 0 0;*/
-	height: 30px;
-	margin-bottom: 7px;
+	height: 29px;
+	padding: 0px 0px 0px 20px;
 	background: transparent url("img/labels-topbar.png") no-repeat top left;
 	border-top-left-radius: 10px;
 	-moz-border-radius-topleft: 10px;
@@ -626,7 +650,7 @@ i.leaf-icon {
 }
 
 .label {
-	margin-top: 3px;
+	margin: 3px 20px 0 0;
 	line-height: 30px;
 	color: #000;
 	text-shadow: 1px 1px 1px #DDD;
