debut d'integration du config + debut de move avec le clavier

--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -138,6 +138,12 @@ i.leaf-icon {
 	z-index: 5;	
 }
 
+#canvasContainer {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+}
+
 #caseContent {
 	height: 200px;
 	width: 150px;
