--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -235,18 +235,14 @@ i.leaf-icon {
    top:-2100px;
    left:30%;
    right:30%;
-   background-color:#222;
+   width:600px;
+   height:170px;
+   background: transparent url("img/error_slide.png") no-repeat top left;
 	font-family: Helvetica, Helv, swiss, sans-serif;
-	color: #eee;
-	text-shadow: #222 1px 1px 1px;
+	color: #222;
+	text-shadow: #ddd 1px 1px 1px;
    padding:20px 20px 30px;
-   border:1px solid #000;
-   -moz-border-radius:10px;
-   -webkit-border-radius:10px;
-   -khtml-border-radius:10px;
-   -moz-box-shadow: 0 1px 5px #333;
-   -webkit-box-shadow: 0 1px 5px #333;
-   z-index:1001;
+   z-index:1200;
 }
 
 #connectionError p {
@@ -259,14 +255,10 @@ i.leaf-icon {
 }
 
 #connectionError h1{
-    margin:-20px -20px 0px -20px;
-    padding: 8px 8px 8px 15px;
-    background-color:#151515;
-    -moz-border-radius:10px 10px 0px 0px;
-    -webkit-border-top-left-radius: 10px;
-    -webkit-border-top-right-radius: 10px;
-    -khtml-border-top-left-radius: 10px;
-    -khtml-border-top-right-radius: 10px;
+	font-size: 24px;
+	color: #111;
+	margin:-15px -20px 0px -20px;
+   padding: 8px 8px 8px 15px;
 }
 
 /* INVENTORY */
