--- a/monitor/client/style.css
+++ b/monitor/client/style.css
@@ -848,3 +848,10 @@ i.leaf-icon {
 	text-align: center;
 	margin-bottom: 15px;
 }
+
+.pieNumber {
+	z-index: 413;
+	position: absolute;
+	background-color: #000000;
+	padding: 5px 5px;
+}
